plugins {
    id 'idea'
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev.legacyforge' version '2.0.141'
    id 'io.freefair.lombok' version '8.6'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

repositories {
    mavenLocal()
    mavenCentral()

    //kubejs
    maven {
        name = "Latvian"
        url = "https://maven.latvian.dev/releases"
        content {
            includeGroup "dev.latvian.mods"
            includeGroup "dev.latvian.apps"
        }
    }
    maven {
        name = "JitPack"
        url = "https://jitpack.io"
        content {
            includeGroup "com.github.rtyley"
        }
    }

    // LDLib2
    maven {
        name = "Jared's maven"
        url = "https://maven.firstdarkdev.xyz/snapshots"
    }

    //GeckoLib
    maven {
        name = 'GeckoLib'
        url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
        content {
            includeGroupByRegex("software\\.bernie.*")
            includeGroup("com.eliotlash.mclib")
        }
    }

    //Modrinth
    maven {
        name = "Modrinth"
        url = "https://api.modrinth.com/maven"
    }

    //cf
    maven {
        url "https://cursemaven.com"
    }

    maven {
        url "https://maven.sighs.cc/repository/maven-public/"
    }

    maven {
        name = "Illusive Soulworks maven"
        url = "https://maven.theillusivec4.top/"
    }

    flatDir {
        dirs 'libs'
    }
}

base {
    archivesName = "${mod_name}-forge-${minecraft_version}"
}

// Mojang ships Java 17 to end users in 1.20.1, so mods should target Java 17.
java.toolchain.languageVersion = JavaLanguageVersion.of(17)

legacyForge {
    // Specify the version of MinecraftForge to use.
    version = project.minecraft_version + '-' + project.forge_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    // This line is optional. Access Transformers are automatically detected
    // accessTransformers = project.files('src/main/resources/META-INF/accesstransformer.cfg')

    runs {
        client {
            client()

            // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
            systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
        }

        // This run config launches GameTestServer and runs all registered gametests, then exits.
        // By default, the server will crash when no gametests are provided.
        // The gametest system is also enabled by default for other run configs under the /test command.
        gameTestServer {
            type = "gameTestServer"
            systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()

            // example of overriding the workingDirectory set in configureEach above, uncomment if you want to use it
            // gameDirectory = project.file('run-data')

            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        // applies to all the run configs above
        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }

// Sets up a dependency configuration called 'localRuntime' and a deobfuscating one called 'modLocalRuntime'
// These configurations should be used instead of 'runtimeOnly' to declare
// a dependency that will be present for runtime testing but that is
// "optional", meaning it will not be pulled by dependents of this mod.
configurations {
    runtimeClasspath.extendsFrom localRuntime
}
obfuscation {
    createRemappingConfiguration(configurations.localRuntime)
}

dependencies {
    // Mixin
    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
    // LDLib2
    //implementation("com.lowdragmc.ldlib2:ldlib2-neoforge-${minecraft_version}:${ldlib2_version}:all")
    modImplementation ":ldlib2-forge-1.20.1-2.2.27"

    //联动模组
    // KubeJS
    modImplementation "dev.latvian.mods:rhino-forge:${rhino_version}"
    modImplementation "dev.latvian.mods:kubejs-forge:${kubejs_version}"
    //精妙背包
    modCompileOnly "maven.modrinth:sophisticated-backpacks:${sophisticated_backpacks_version}"
    modCompileOnly "maven.modrinth:sophisticated-core:${sophisticated_core_version}"
    //超越维度
    modCompileOnly "curse.maven:beyond-dimensions-1222890:${beyonddimensions_version}"
    //Lightman's Currency
    modCompileOnly "maven.modrinth:lightmans-currency:${lightmans_currency_version}"
    //汇流来世
    modCompileOnly "top.theillusivec4.curios:curios-forge:${curios_version}"
/*     modCompileOnly "org.confluence.lib:Confluence-Magic-Lib:${confluence_lib_version}"
     modCompileOnly ("org.confluence.mod:ConfluenceOtherworld:${confluence_version}") {
         transitive = false
     }*/
    modCompileOnly "maven.modrinth:terra-curio:${terra_curio_version}"
    modCompileOnly "maven.modrinth:terra-entity:${terra_entity_version}"
    //Magic Coins
    // modCompileOnly "curse.maven:magic-coins-597281:${magic_coins_version}"
    // modCompileOnly "curse.maven:sg-economy-api-1446971:${sg_economy_api_version}"
    //jech
    modCompileOnly "curse.maven:just-enough-characters-250702:${jech_version}"
    //ftb
    modImplementation "curse.maven:ftb-quests-forge-289412:8078538"
    modImplementation "curse.maven:ftb-library-forge-404465:8226927"
    modImplementation "curse.maven:ftb-teams-forge-404468:7499810"
    modImplementation "curse.maven:architectury-api-419699:5137938"
    //tacz
    modCompileOnly "maven.modrinth:timeless-and-classics-zero:${tacz_version}"
    //拔刀剑
    modCompileOnly "maven.modrinth:slashblade-resharped:${slashblade_resharped_version}"

    //must
    runtimeOnly "maven.modrinth:embeddium:${sodium_version}"
    // runtimeOnly "maven.modrinth:iris:${iris_version}"
    runtimeOnly "curse.maven:lan-server-properties-387365:${lsp_version}"
    runtimeOnly "maven.modrinth:jei:${jei_version}"
}

// Uncomment the lines below if you wish to configure mixin. The mixin file should be named modid.mixins.json.
mixin {
    add sourceSets.main, "${mod_id}.refmap.json"
    config "${mod_id}.mixins.json"
}

jar {
    manifest.attributes([
            "MixinConfigs": "${mod_id}.mixins.json"
    ])
}

// This block of code expands all declared replace properties in the specified resource targets.
// A missing property will result in an error. Properties are expanded using ${} Groovy notation.
var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version        : minecraft_version,
            minecraft_version_range  : minecraft_version_range,
            forge_version            : forge_version,
            forge_version_range      : forge_version_range,
            loader_version_range     : loader_version_range,
            mod_id                   : mod_id,
            mod_name                 : mod_name,
            mod_license              : mod_license,
            mod_version              : mod_version,
            mod_authors              : mod_authors,
            mod_description          : mod_description
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/resources"
    into "build/generated/sources/modMetadata"
}
// Include the output of "generateModMetadata" as an input directory for the build
// this works with both building through Gradle and the IDE.
sourceSets.main.resources.srcDir generateModMetadata
// To avoid having to run "generateModMetadata" manually, make it run on every project reload
legacyForge.ideSyncTask generateModMetadata

// Example configuration to allow publishing using the maven-publish plugin
publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
